--- a/autocomplete-non-react/package.json
+++ b/autocomplete-non-react/package.json
@@ -4,8 +4,23 @@
   "description": "Click `index.html` to view this",
   "main": "html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack-dev-server",
+    "build": "babel scripts -d lib"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "path": "^0.12.7",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "html-webpack-plugin": "^2.30.1"
+  }
 }
